@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: html.c,v 1.129 2003/08/07 17:32:05 thyssen Exp $
+ * $Id: html.c,v 1.130 2003/08/07 17:44:43 thyssen Exp $
  */
 
 #include "config.h"
@@ -169,7 +169,7 @@ WriteStyleSheet ( FILE *pf, const htmlexportcss hecss ) {
 
     fputs( _("\n" 
              "/* CSS Stylesheet for GNU Backgammon " VERSION " */\n"
-             "/* $Id: html.c,v 1.129 2003/08/07 17:32:05 thyssen Exp $ */\n"
+             "/* $Id: html.c,v 1.130 2003/08/07 17:44:43 thyssen Exp $ */\n"
              "/* This file is distributed as a part of the "
              "GNU Backgammon program. */\n"
              "/* Copying and distribution of verbatim and modified "
@@ -1913,7 +1913,7 @@ HTMLEpilogue ( FILE *pf, const matchstate *pms, char *aszLinks[ 4 ],
   int fFirst;
   int i;
 
-  const char szVersion[] = "$Revision: 1.129 $";
+  const char szVersion[] = "$Revision: 1.130 $";
   int iMajor, iMinor;
 
   iMajor = atoi ( strchr ( szVersion, ' ' ) );
@@ -1994,7 +1994,7 @@ HTMLEpilogueComment ( FILE *pf ) {
 
   time_t t;
 
-  const char szVersion[] = "$Revision: 1.129 $";
+  const char szVersion[] = "$Revision: 1.130 $";
   int iMajor, iMinor;
   char *pc;
 
@@ -3304,23 +3304,6 @@ static void HTMLDumpStatcontext ( FILE *pf, const statcontext *psc,
                            -aaaar[ COMBINED ][ PERMOVE ][ PLAYER_1 ][ UNNORMALISED ] 
                            * 100.0f );
 
-      {
-        char asz[ 2 ][ 16 ];
-
-        for ( i = 0; i < 2; ++i )
-          if ( ( j = psc->anTotalMoves[ 0 ] + psc->anTotalMoves[ 1 ] ) )
-            sprintf( asz[ i ], "%.1f", 1000.0 * 
-                     -aaaar[ COMBINED ][ TOTAL ][ i ][ NORMALISED ] / j );
-          else
-            strcpy( asz[ i ], _("n/a") );
-
-        printStatTableRow ( pf, 
-                            _("Equivalent Snowie error rate"), 
-                            "%s", asz[ 0 ], asz[ 1 ] );
-
-      }
-
-
     }
     else {
 
@@ -3335,6 +3318,23 @@ static void HTMLDumpStatcontext ( FILE *pf, const statcontext *psc,
                            -aaaar[ COMBINED ][ PERMOVE ][ PLAYER_1 ][ UNNORMALISED ] );
 
     }
+
+    {
+      char asz[ 2 ][ 16 ];
+      
+      for ( i = 0; i < 2; ++i )
+        if ( ( j = psc->anTotalMoves[ 0 ] + psc->anTotalMoves[ 1 ] ) )
+            sprintf( asz[ i ], "%.1f", 1000.0 * 
+                     -aaaar[ COMBINED ][ TOTAL ][ i ][ NORMALISED ] / j );
+        else
+          strcpy( asz[ i ], _("n/a") );
+      
+      printStatTableRow ( pf, 
+                          _("Equivalent Snowie error rate"), 
+                          "%s", asz[ 0 ], asz[ 1 ] );
+      
+    }
+
 
     for ( i = 0 ; i < 2; i++ ) 
       rt[ i ] = GetRating ( aaaar[ COMBINED ][ PERMOVE ][ i ][ NORMALISED ] );
